--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,8 @@
 
   <p>Before the script...</p>
 
-  <script>
-    alert( 'Hello, world!' );
+  <script src="my.js">
+    alert(1) // the content is ignored onece src is set
   </script>
 
   <p>...After the script.</p>
